<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2019, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent-ws</artifactId>
        <version>8</version>
        <relativePath/>
    </parent>

    <artifactId>powsybl-network-store</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>Network store</name>
    <url>http://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-network-store.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-network-store.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-network-store</url>
    </scm>

    <developers>
        <developer>
            <name>Geoffroy JAMGOTCHIAN</name>
            <email>geoffroy.jamgotchian@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Jon HARPER</name>
            <email>jon.harper@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>11</java.version>

        <lombok.version>1.18.24</lombok.version>
        <sirocco.version>1.0</sirocco.version>
        <springboot.version>2.7.3</springboot.version>
        <springdoc-openapi.version>1.5.13</springdoc-openapi.version>
        <equalsverifier.version>3.10</equalsverifier.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <powsybl-dependencies.version>1.2.0</powsybl-dependencies.version>
        <powsybl-ws-commons.version>1.2.0</powsybl-ws-commons.version>
        <jackson.version>2.13.2.20220328</jackson.version>

        <sonar.coverage.jacoco.xmlReportPaths>
            ../network-store-integration-test/target/site/jacoco-aggregate/jacoco.xml,
            ../../network-store-integration-test/target/site/jacoco-aggregate/jacoco.xml,
            ../../../network-store-integration-test/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
    </properties>

    <modules>
        <module>network-store-client</module>
        <module>network-store-integration-test</module>
        <module>network-store-model</module>
        <module>network-store-server</module>
        <module>network-store-tools</module>
        <module>network-store-iidm-tck</module>
        <module>network-store-iidm-impl</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- overrides of imports -->

            <!-- The version 2.10 put by Powsybl cause a problem. spring boot 2.6 needs at least 2.13: https://github.com/FasterXML/jackson-databind/issues/2683 -->
            <!-- java.lang.NoSuchMethodError: 'boolean com.fasterxml.jackson.databind.SerializationConfig.hasExplicitTimeZone()' -->
            <!-- Use the version from spring boot 2.6.6 which contains the fix for the  spring 4 shell CVE -->
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- imports -->
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-dependencies</artifactId>
                <version>${powsybl-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- project specific dependencies (also overrides imports, but separate for clarity) -->
            <dependency>
                <groupId>nl.jqno.equalsverifier</groupId>
                <artifactId>equalsverifier</artifactId>
                <version>${equalsverifier.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-ws-commons</artifactId>
                <version>${powsybl-ws-commons.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.sirocco</groupId>
                <artifactId>sirocco-text-table-formatter</artifactId>
                <version>${sirocco.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>log4j</groupId>
                        <artifactId>log4j</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <classpathDependencyExcludes>
                            <classpathDependencyExclude>com.powsybl:powsybl-config-classic</classpathDependencyExclude>
                        </classpathDependencyExcludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <classpathDependencyExcludes>
                            <classpathDependencyExclude>com.powsybl:powsybl-config-classic</classpathDependencyExclude>
                        </classpathDependencyExcludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>client</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>network-store-model</module>
                <module>network-store-client</module>
            </modules>
        </profile>
    </profiles>

</project>
